# e-seg

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
e_seg/: asgi.py  settings.py  urls.py  wsgi.py
forum/: admin.py  views.py
forum/forms/: __init__.py  create_in_discussion.py  create_in_forum.py
forum/migrations/: 0001_initial.py
forum/models/: __init__.py  discussion.py  forum.py
forum/templates/: add_in_discussion.html  add_in_forum.html  home.html
