[tool.poetry]
name = "e-seg"
version = "0.1.0"
description = "projeto para o Grand Prix de Inovação SENAI 2022"
authors = ["Raama, Francisco, Larissa, José, Caio"]
readme = "README.md"
packages = [{include = "e_seg"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
